# ceres

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  THIRD_PARTY_NOTICES.md  TODO.md  architecture.md  changelog.md  feature.md  ideas.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.dox  groups.dox  portability.dox  safety.dox  sync_pipeline.dox  windows-smoke-test.md
icons/: ceres.icns
packaging/: ceres.desktop
qml/: AddSshHostDialog.qml  BrowseTab.qml  Chip.qml  DeleteConfirmDialog.qml  Field.qml  FileBrowserPane.qml  FlatButton.qml  KnownHostChangedDialog.qml  Main.qml  NewHostDialog.qml  SshPasswordDialog.qml  Theme.qml  TransfersDialog.qml
scripts/: stage-msys2-rsync.ps1  stage-qt-runtime.ps1
src/: main.cpp
src/app/: BrowseController.cpp  BrowseController.h  BrowseSessions.cpp  BrowseSessions.h  JobController.cpp  JobController.h  Notifier.cpp  Notifier.h  PathCompleter.cpp  PathCompleter.h  RemoteFs.cpp  RemoteFs.h  SshCommand.cpp  SshCommand.h  TransferManager.cpp  TransferManager.h
src/cli/: AdHocTransfer.cpp  AdHocTransfer.h  runner_main.cpp
src/core/: AppSettings.h  ConfigBundle.cpp  ConfigBundle.h  Endpoint.cpp  Endpoint.h  FileEntry.h  Format.h  JobId.h  PairedDevice.h  PairedDeviceStore.cpp  PairedDeviceStore.h  PairingCode.cpp  PairingCode.h  Peer.h  ProfileStore.cpp  ProfileStore.h  SecretStore.cpp  SecretStore.h  Snapshot.cpp  Snapshot.h  SshConfigImport.cpp  SshConfigImport.h  SshHost.h  SshHostStore.cpp  SshHostStore.h  SshKnownHosts.cpp  SshKnownHosts.h  SyncJob.h
src/engine/: ArgvBuilder.cpp  ArgvBuilder.h  BinaryLocator.cpp  BinaryLocator.h  OutputParser.cpp  OutputParser.h  RsyncEvents.h  RsyncProcessEngine.cpp  RsyncProcessEngine.h  SyncEngine.h
src/models/: ChangeListModel.cpp  ChangeListModel.h  FileListModel.cpp  FileListModel.h  JobListModel.cpp  JobListModel.h  PeerModel.cpp  PeerModel.h  SshHostListModel.cpp  SshHostListModel.h  TransfersModel.cpp  TransfersModel.h
src/net/: Beacon.cpp  Beacon.h  DiscoveryService.cpp  DiscoveryService.h  NetworkUtils.cpp  NetworkUtils.h
src/sched/: Scheduler.cpp  Scheduler.h
tests/: CMakeLists.txt  tst_adhoctransfer.cpp  tst_argvbuilder.cpp  tst_beacon.cpp  tst_binarylocator.cpp  tst_configbundle.cpp  tst_endpoint.cpp  tst_filelistmodel.cpp  tst_jobcontroller.cpp  tst_outputparser.cpp  tst_pairing.cpp  tst_pathcompleter.cpp  tst_profilestore.cpp  tst_remotefs.cpp  tst_scheduler.cpp  tst_secretstore.cpp  tst_snapshot.cpp  tst_sshconfigimport.cpp  tst_sshknownhosts.cpp  tst_transfermanager.cpp
